Add authors, add elements to HTML and start CSS styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="">
+    <meta name="author" content="Kaija Ratinen, Mikael Laakso, Juho Nissinen, Sara Vesterinen">
     <link rel="stylesheet" href="styles.css">
     <title>Eeppinen sähkönseuranta</title>
 </head>
@@ -19,19 +19,22 @@
         <section id="home-appliances">
 
         </section>
-        <section id="min-max-prices">
+        <section class="min-max-prices">
             <div id="avg-price">
+                <p>Matalin hinta:</p>
             </div>
             <div id="min-price">
+                <p>Keskihinta:</p>
             </div>
             <div id="max-price">
+                <p>Korkein hinta:</p>
             </div>
         </section>
         <h2>miau:3</h2>
         <button type="submit" id="data">Button</button>
     </main>
     <footer>
-        <p>&#169 Meikä Molotovit</p>
+        <p>&#169 Meikä Molotovit 2025</p>
     </footer>
     <script src="main.js"></script>
 </body>
